adjusted image content

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html">Donate</a></li>
+                    <li><a href="https://www.venmo.com/Patrick_Laurion">Donate</a></li>
                     <li><a href="animal.html">Animal</a></li>
-                    <li><a href="index.html">Partner Link</a></li>
+                    <li><a href="https://rameezy.github.io/lab04site/index.html">Partner Link</a></li>
                 </ul>
             </nav>
                 </div>
@@ -24,7 +24,7 @@
                     <div class="leftcolumn">
                     <div class="card">
                         <h2><script>askUserName()</script></h2>
-                        <div class="img" style="height:250px;"><img src="liontiger.jpg" id="Lion v.s. Tiger" width="400" hight="400">
+                        <div class="img" style="height:300px;"><img src="liontiger.jpg" id="Lion v.s. Tiger" width="500" hight="500">
                         </div>
                         <p>An brute dissentias eloquentiam pro. In vim impedit molestie oportere, altera nominati mea an. 
                             Nec ut tempor mollis gloriatur, at pro unum altera deseruisse. Vis ex mandamus sadipscing dissentiet. 
@@ -44,14 +44,16 @@
                     <div class="rightcolumn">
                     <div class="card">
                         <h2>About The Author</h2>
-                        <div class="img" style="height:100px;">Image</div>
-                        <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+                        <div class="img"><img src="he-man.jpg" width="215"></div>
+                        <p>If you thought the Tiger King was intense, you haven't meet Patrick!
+                            He has spent his entire life dedicated to making up content to put 
+                            on this website for your viewing pleasure! </p>
                     </div>
                     <div class="card">
                         <h3>I Used These Languages!</h3>
-                        <div class="img"><img src="HTML5.jpg" width="125"></div><br>
-                        <div class="img"><img src="css.png" width="125"></div><br>
-                        <div class="img"><img src="javascript.png" width="125"></div>
+                        <div class="img"><img src="HTML5.jpg" width="175"></div><br>
+                        <div class="img"><img src="css.png" width="175"></div><br>
+                        <div class="img"><img src="javascript.png" width="175"></div>
                     </div>
                     <div class="card">
                         <h3>View my Github Account!</h3>
