deleted animal.html file, added new image and modifed some css

--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
                         </p>
                     </div>
                     <div class="card">
-                        <h2>TITLE HEADING</h2>
-                        <h5>Title description, Sep 2, 2017</h5>
-                        <div class="img" style="height:250px;">Image</div>
+                        <h2>PREDATORS ONLY!</h2>
+                        <div class="img" style="height:300px;"><img src="predator.jpg" id="Lion v.s. Tiger" width="500" hight="500"></div>
                         <p>An brute dissentias eloquentiam pro. In vim impedit molestie oportere, altera nominati mea an. 
                             Nec ut tempor mollis gloriatur, at pro unum altera deseruisse. Vis ex mandamus sadipscing dissentiet. 
                             Ne elitr platonem his, ullum consequat aliquando ea per, sumo vide eum te.
@@ -62,7 +61,7 @@
                 </div>
                 
                 <div class="footer">
-                    <h2>Footer</h2>
+                    <h2>Dont forget to click the <a href="https://www.venmo.com/Patrick_Laurion">Donate</a> link!  Beer money is greatly appreciated!</h2>
                 </div>
         </body>
 </html>
