--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <title>Animals of the World</title>
     <link rel="stylesheet" href="style.css" type="text/css">
-    <script src="add01.js"></script>
-    <script scr="add02.js"></script>
+    <script src="js/add01.js"></script>
+    <script src="js/add02.js"></script>
+    <script src="js/add03.js"></script>
 </head>                
           <body>      
                 <div class="header">
